# minisearch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISH.md  README.md
.github/workflows/: ci.yml  pages.yml
demo/: index.html  sample-docs.js
examples/: cli.rs
pkg/: README.md  minisearch_rs.d.ts  minisearch_rs.js  minisearch_rs_bg.wasm  minisearch_rs_bg.wasm.d.ts  package.json
src/: error.rs  index.rs  lib.rs  search.rs  snippet.rs  tokenizer.rs  wasm.rs
tests/: integration.rs
