[package]
name = "minisearch-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny BM25 full-text search engine, built from scratch in Rust to learn the language and target wasm."
license = "MIT"
repository = "https://github.com/zhousiyao03/minisearch-rs"
readme = "README.md"
keywords = ["search", "bm25", "full-text-search", "wasm"]
categories = ["text-processing", "wasm"]

[dependencies]
unicode-segmentation = "1.12"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
insta = "1"
proptest = "1"
tempfile = "3"

[[example]]
name = "cli"
path = "examples/cli.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
